# one-off

./: MemoWtf.hs  NormalDistribution.hs  anki-combine-un-nations.hs  cablol.hs  clon.pub  combine-subtitles.hs  dia.hs  genFluxboxKeys.hs  list-dates.hs  phone-lock-patterns.hs  process-pdf-table-for-demographia.hs  rich.hs  test.sh
Moon/: Moon.hs
alarm/: Makefile  b.c
anki/: ordered-list-to-pairwise-csv.hs
anki-list/: a.hs  anki_wds  b.hs
blankPane/: Makefile  b.c  g  jem.c
bubogo/: Makefile  bubogo.hs  input  out1  template
chace-prob/: a.hs
colors/: print-color-configs.hs
count-monoids/: Makefile  README  a.c
countMonoids/: b.c  c.c
cred/: a.hs  cred.txt  hand.txt  out
cube-sum/: Makefile  README.txt  cube-sum.hs  do-run  gen-run-list.hs  timer.hs  v1.c  v2.c  v2.cl  vhash.c
data-display/: ten-groups.hs
datediff/: a.hs
ddo/: Ddo.hs  Makefile  MyDdos.hs
ecca-train-math/: a.hs
exer-timer/: a.hs
fcitx/: Makefile  danarabic.txt  danhebrew.txt  danrussian.txt  make-dankorean.hs
fcitx-table-translate/: Makefile
floor-lamp-extend-shade/: a.hs
fluxbox-keys/: a.hs  g
fma/: Makefile  README  a.c
font-compare/: a.hs
font_compare/: a.hs  out
francie-coworkers/: orricksv
gen-fluxbox-keys/: a.hs
go-match/: match.hs
gxc/: Makefile  README  g
hanyu-hear-me/: 1-make-js.hs  2-compress  3-deploy  a.html  all.txt.bz2  (+3 more)
helenium/: Makefile  README  helenium  helenium.cabal
helenium/src/: Download.hs  Helenium.hs
hs/syb3paper/: Example.hs  README  syb3paper.cabal
hs/syb3paper/src/: Syb3Paper.hs  Syb3PaperManually.hs  VarTree.hs
(+286 files in other folders)
